[gd_scene load_steps=9 format=2]

[ext_resource path="res://font/Roboto-Bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://font/Roboto-Regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://sprites/Kenney/Environment/medievalEnvironment_21.png" type="Texture" id=3]
[ext_resource path="res://sprites/Kenney/Unit/medievalUnit_01.png" type="Texture" id=4]
[ext_resource path="res://sprites/SolarPanel.png" type="Texture" id=5]
[ext_resource path="res://scripts/UI.gd" type="Script" id=6]
[ext_resource path="res://scripts/CastSpellList.gd" type="Script" id=7]
[ext_resource path="res://scripts/SpellPicker.gd" type="Script" id=8]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 576.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 144.0
color = Color( 0.137255, 0.137255, 0.137255, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndTurnButton" type="Button" parent="."]
margin_left = 1046.0
margin_top = 34.0
margin_right = 1246.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 1 )
text = "End Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="print map" type="Button" parent="."]
margin_left = 648.0
margin_top = 28.0
margin_right = 848.0
margin_bottom = 103.0
custom_fonts/font = ExtResource( 1 )
text = "print map"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnText" type="Label" parent="."]
margin_left = 878.0
margin_top = 56.0
margin_right = 1021.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 2 )
text = "Turn 257"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionButtons" type="HBoxContainer" parent="."]
margin_left = 34.0
margin_top = 34.0
margin_right = 270.0
margin_bottom = 109.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectCastButton" type="Button" parent="ActionButtons"]
margin_right = 76.0
margin_bottom = 75.0
icon = ExtResource( 3 )

[node name="ResearchButton" type="Button" parent="ActionButtons"]
margin_left = 80.0
margin_right = 156.0
margin_bottom = 75.0
icon = ExtResource( 5 )

[node name="StatsButton" type="Button" parent="ActionButtons"]
margin_left = 160.0
margin_right = 236.0
margin_bottom = 75.0
icon = ExtResource( 4 )

[node name="HeaderFoodMetal" type="Label" parent="."]
margin_left = 316.0
margin_top = 32.0
margin_right = 431.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 2 )
text = "Mana:
Power:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodMetalText" type="Label" parent="."]
margin_left = 419.0
margin_top = 33.0
margin_right = 677.0
margin_bottom = 108.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.678431, 0, 1 )
text = "325 (+20)
+60"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderOxygenEnergy" type="Label" parent="."]
visible = false
margin_left = 616.0
margin_top = 32.0
margin_right = 728.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 2 )
text = "Oxygen:
Energy:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OxygenEnergyText" type="Label" parent="."]
visible = false
margin_left = 736.0
margin_top = 32.0
margin_right = 851.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.678431, 0, 1 )
text = "25 (+80)
25 (+80)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpellPicker" type="WindowDialog" parent="."]
visible = true
margin_left = 32.0
margin_top = -528.0
margin_right = 704.0
margin_bottom = -24.0
window_title = "Cast a Spell"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CastSpellList" type="ItemList" parent="SpellPicker"]
margin_right = 224.0
margin_bottom = 504.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpellName" type="Label" parent="SpellPicker"]
margin_left = 264.0
margin_top = 32.0
margin_right = 616.0
margin_bottom = 80.0
text = "Choose a spell"

[node name="SpellDescription" type="RichTextLabel" parent="SpellPicker"]
margin_left = 264.0
margin_top = 80.0
margin_right = 640.0
margin_bottom = 256.0

[node name="CastButton" type="Button" parent="SpellPicker"]
margin_left = 360.0
margin_top = 400.0
margin_right = 504.0
margin_bottom = 448.0
disabled = true
text = "CAST"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="EndTurnButton" to="." method="_on_EndTurnButton_pressed"]
[connection signal="pressed" from="print map" to="." method="_on_print_map_pressed"]
[connection signal="pressed" from="ActionButtons/SelectCastButton" to="." method="_on_SelectCastButton_pressed"]
[connection signal="pressed" from="ActionButtons/ResearchButton" to="." method="_on_ResearchButton_pressed"]
[connection signal="pressed" from="ActionButtons/StatsButton" to="." method="_on_StatsButton_pressed"]
[connection signal="item_selected" from="SpellPicker/CastSpellList" to="SpellPicker/CastSpellList" method="_on_CastSpellList_item_selected"]
[connection signal="pressed" from="SpellPicker/CastButton" to="SpellPicker" method="_on_CastButton_pressed"]
